--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/vue-material": "git+https://github.com/calebsander/vue-material-types.git",
     "axios": "^0.18.0",
     "core-js": "^3.4.4",
+    "firebase": "^7.7.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
