--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@okta/okta-vue": "^1.1.0",
+    "@types/okta__okta-vue": "^1.0.2",
     "@types/vue-material": "git+https://github.com/calebsander/vue-material-types.git",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "core-js": "^3.4.4",
     "firebase": "^7.7.0",
     "register-service-worker": "^1.6.2",
